k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: backend, namespace: bootcamp1-app }
spec:
  replicas: 2
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      containers:
        - name: backend
          image: 840577818615.dkr.ecr.us-east-1.amazonaws.com/bootcamp1-app-backend:latest
          ports: [{ containerPort: 8000 }]
          readinessProbe:
            httpGet: { path: /healthz, port: 8000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /healthz, port: 8000 }
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits:   { cpu: 500m, memory: 256Mi }
---
apiVersion: v1
kind: Service
metadata: { name: backend, namespace: bootcamp1-app } 
spec: 
  selector: { app: backend }
  ports: [{ port: 8000, targetPort: 8000 }]
